update all configs and create initial tests and test patches